# resume-classification

./: .gitignore  README.md  main.py  pyproject.toml  resume_classification.ipynb
backend/: main.py  models.py  utils.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
